# sem

./: .gitignore  README.md  TODO.md
semsearch/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
semsearch/src/: commands.ts  extension.ts  search-results.css  search-results.ts  types.ts
semvec/: .gitignore  pyproject.toml
semvec/core/: main.py  test.py
semvec/core/constants/: __init__.py  file_patterns.py
semvec/core/models/: __init__.py  code_location.py
semvec/core/services/: __init__.py  chunk_codebase.py  codebase_traversal.py  index_repository.py  query_codebase.py  retrieval_system.py
